# TRACER

./: CHANGELOG.md  CONTRIBUTING.md  DATASET_INFORMATION.md  Makefile  QUICK_START.md  README.md  pyproject.toml
docs/: CASE_STUDIES_AND_TRIAGE.md  CRITICAL_VERIFICATION.md  DATA_VERIFICATION_REPORT.md  FULL_TECHNICAL_REPORT.md  HONESTY_AND_REPRODUCIBILITY.md  MULTI_PROPERTY_IMPLEMENTATION.md  REPRODUCIBILITY_CHECKLIST.md  RESULTS_LEGITIMACY_STATEMENT.md  SUBMISSION_READINESS.md  SUPPLEMENTARY_MATERIAL.md  high_error_cases.md  learning_curve_data.json  variance_vs_random.md
scripts/: analyze_case_studies.py  analyze_errors_by_category.py  analyze_gate_hard_yield.py  calibrate_alignn_uncertainty.py  calibrate_uncertainty.py  calibrate_uncertainty_improved.py  compare_alignn_vs_ours.py  compute_normalization_stats.py  create_independent_test_set.py  download_data.py  evaluate_alignn_fixed.py  evaluate_fair_comparison.py  evaluate_gemnet_film.py  evaluate_matbench.py  evaluate_uncertainty.py  final_independent_validation.py  final_validation.py  fine_tune_matbench.py  fix_extxyz_for_alignn.py  generate_ensemble_predictions.py  generate_figures.py  generate_real_ensemble_predictions.py  load_and_preprocess_full_dataset.py  prepare_split.py  preprocess_full_dataset.py  robustness_ablations.py  run_ablations.py  run_gate_hard_with_gemnet.py  setup_alignn_comparison.py  train_alignn_fixed.py  train_gemnet_baseline.py  train_gemnet_domain_only.py  train_gemnet_per_atom.py  use_existing_ensemble.py
scripts/archive/: analyze_alignn_issues.py  analyze_delta_corrections.py  authenticity_audit.py  check_alignn_epoch.sh  cli_pipeline.py  convert_mptrj_to_lmdb.py  debug_delta_head.py  error_taxonomy.py  eval_gnn.py  evaluate_delta_on_hard_cases.py  evaluate_pipeline_with_delta.py  evaluate_realistic_delta.py  extract_real_schnet_features.py  fix_placeholder_data.py  gnn_cli.py  integrate_gemnet_into_pipeline.py  monitor_and_stop_alignn_at_50.sh  prep_data.py  preprocess_mptrj.py  preprocess_training_data.py  real_data_pipeline.py  real_ensemble_pipeline.py  red_flag_audit.py  repair_pyg_wheels.py  stop_alignn_at_50.sh  test_alignn_on_testset.py  test_existing_ensemble.py  test_fixed_pipeline.py  test_full_pipeline.py  test_improved_pipeline.py  test_mp_evaluation.py  test_mptrj_evaluation.py  test_qm9_evaluation.py  test_unified_registry.py  test_vasp_pipeline.py  test_with_real_structures.py  train_alignn_comparison.py  train_alignn_direct.py  train_alignn_from_scratch.py  (+25 more)
src/: citations.py  data_documentation.py  predict.py
tests/: test_gnn_stub.py  test_graphs.py
(+52 files in other folders)
